# AMM-near

./: README.md
amm-contract/: Cargo.toml
amm-contract/src/: lib.rs
res/: amm_contract.wasm  deploy.sh  test.sh  token_contract.wasm
token-contract/: Cargo.toml
token-contract/src/: lib.rs
